  Version 3.16 Tue Dec 27 13:54:19 EST 2005
   1. header() -charset option now works even when the MIME type is not "text".
   2. Fixed documentation for cookie() function and fastCGI.
   3. Upload filehandles now only closed automatically on Windows systems.

  Version 3.15 Wed Dec  7 15:13:22 EST 2005
   1. Remove extraneous "?" from self_url() when URI contains a ? but no query string.

  Version 3.14 Tue Dec  6 17:12:03 EST 2005
   1. Fixed broken scrolling_list() select attribute.
	
  Version 3.13
    1. Removed extraneous empty "?" from end of self_url().

  Version 3.12
    1. Fixed virtual_port so that it works properly with https protocol.
    2. Fixed documentation for upload_hook().
    3. Added POSTDATA documentation.
    4. Made upload_hook() work in function-oriented mode.
    5. Fixed POST_MAX behavior so that it doesn't cause client to hang.
    6. Disabled automatic tab indexes and added new -tabindex pragma to
	turn automatic indexes back on.
    7. The url() and self_url() methods now work better in the context of Apache
       mod_rewrite. Be advised that path_info() may give you confusing results
       when mod_rewrite is active because Apache calculates the path info *after*
       rewriting. This is mostly worked around in url() and self_url(), but you
       may notice some anomalies.
    8. Removed empty (and non-validating) <div> from code emitted by end_form().
    9. Fixed CGI::Carp to work correctly with Mod_perl 1.29 in an Apache 2 environment.
   10. Setting $CGI::TMPDIRECTORY should now be effective.

  Version 3.11
    1. Killed warning in CGI::Cookie about MOD_PERL_API_VERSION
    2. Fixed append() so that it works in function mode.
    3. Workaround for a bug that appears in Apache2 versions through 2.0.54 
       in which SCRIPT_NAME and PATH_INFO are incorrect if the additional path_info
       contains a double slash. This workaround will handle the common case of